lib/tests/fixtures/compiler/parser/func_duplicate_param.baseline
Error: func_duplicate_param.pp:1:18: parameter $x already exists in the parameter list.
  function foo($x, $x)
                   ^~
